--- a/pandora_venv/pyvenv.cfg
+++ b/pandora_venv/pyvenv.cfg
@@ -1,5 +1,8 @@
-home = C:\Users\thanh\AppData\Local\Programs\Python\Python311
+home = C:\Users\thanh\AppData\Local\Programs\Python\Python39
+implementation = CPython
+version_info = 3.9.10.final.0
+virtualenv = 20.17.1
 include-system-site-packages = false
-version = 3.11.1
-executable = C:\Users\thanh\AppData\Local\Programs\Python\Python311\python.exe
-command = C:\Users\thanh\AppData\Local\Programs\Python\Python311\python.exe -m venv D:\Schools\Project_2\Pandora\pandora_venv
+base-prefix = C:\Users\thanh\AppData\Local\Programs\Python\Python39
+base-exec-prefix = C:\Users\thanh\AppData\Local\Programs\Python\Python39
+base-executable = C:\Users\thanh\AppData\Local\Programs\Python\Python39\python.exe
